--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-setuptools
-matplotlib
-seaborn
-
+numpy~=1.24.2
+pandas~=2.0.3
+setuptools~=47.1.0
+matplotlib~=3.7.4
+seaborn~=0.13.0
+scipy~=1.10.1
